--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -8,19 +8,12 @@ This guide documents BOSH Backup and Restore (BBR), a framework for backing up a
 ## <a id='overview'></a>Overview
 
 BBR orchestrates triggering the backup or restore process on the BOSH deployment or BOSH Director,
-and transfers the backup artifacts to and from the BOSH deployment or BOSH Director.
+and transfers the backup artifacts to and from the BOSH deployment or BOSH Director. You should
+frequently backup your deployment using BBR, especially before upgrading a deployment. 
 
 For more information about installing and using BBR, see the [Installing BOSH Backup and Restore](installing.html), [Backing up with BOSH Backup and Restore](backup.html), and [Restoring with BOSH Backup and Restore](restore.html) topics. Information for release authors and developers is also available in the [BOSH Backup and Restore Developer's Guide](bbr-devguide.html).
 
 For more information about backing up and restoring cf-deployment with BBR, see [Configuring Cloud Foundry for BOSH Backup and Restore](cf-backup.html).
-
-## <a id='recs'></a> Recommendations
-
-* Back up frequently, especially before upgrading any deployment.
-
-* For BOSH v270.0 and above, you can prune the BOSH blobstore by running `bosh clean-up --all` prior to running a backup of the BOSH director. This will remove all unused resources including packages compiled against older stemcell versions. This will result in a smaller, faster backup of the BOSH director if a lot of unused resources have accumulated over time. For more information see [Clean-Up](https://bosh.io/docs/cli-v2/#clean-up).
-
-<p class="note"><strong>Note:</strong>The command `bosh clean-up --all` is a destructive operation and can remove resources that are unused but needed. For example, if an On-Demand Service Broker is deployed <strong>and</strong> no service instances have been created, the releases needed to create a service instance will be categorised as unused and removed.</p>
 
 ## <a id='supported'></a>Supported Components
 
