--- a/backup.html.md.erb
+++ b/backup.html.md.erb
@@ -153,10 +153,14 @@ To connect with `BOSH_ALL_PROXY`, do one of the following:
     bosh clean-up --all
     ```
     
-    The above command removes all unused resources, including packages complied against older stemcells. If a lot of unused resources have accumulated over time, this results in a smaller, faster backup of BOSH Director. 
+    The above command removes all unused resources, including packages complied against older stemcells. If a lot of unused 
+    resources have accumulated over time, this results in a smaller, faster backup of BOSH Director. 
     For more information see [Clean-Up](https://bosh.io/docs/cli-v2/#clean-up) in BOSH documentation.
     
-    <p class="note"><strong>Note:</strong> The above command is destructive and can remove resources that are unused but necessary. For example, if an on-demand service broker is deployed and no service instances have been created, the releases needed to create a service instance are categorized as unused and are removed.
+    <p class="note warning">
+	    <strong>Note:</strong> The above command is destructive and can remove resources that are unused 
+	    but necessary. For example, if an on-demand service broker is deployed and no service instances have been created, 
+	    the releases needed to create a service instance are categorized as unused and are removed.
     </p>
   
 1. Run the BBR backup command to back up your BOSH Director:
