--- a/backup.html.md.erb
+++ b/backup.html.md.erb
@@ -158,7 +158,7 @@ To connect with `BOSH_ALL_PROXY`, do one of the following:
     For more information see [Clean-Up](https://bosh.io/docs/cli-v2/#clean-up) in the BOSH documentation.
 
     <p class="note warning">
-	    <strong>Note:</strong> The above command is destructive and can remove resources that are unused
+	    <strong>Warning:</strong> The above command is destructive and can remove resources that are unused
 	    but necessary. For example, if an on-demand service broker is deployed and no service instances have been
       created, the releases needed to create a service instance are categorized as unused and are removed.
     </p>
